--- a/Inferencia_y_modelizacion.ipynb
+++ b/Inferencia_y_modelizacion.ipynb
@@ -511,9 +511,10 @@
     "\n",
     "* Haz plot de los datos y del ajuste. (Recuerda poner la leyenda)\n",
     "\n",
-    "* Calcular error cuádratico promedio (mse). \n",
+    "* Calcula el $\\chi^2$ de tu ajuste (mira la equación en la teoría) y calcula P(X>x) usando la función de distribución de $\\chi^2$ con los grados de libertad de este problema (usa scipy.stats.chi2, (P(X>x) = 1-P(X<=x).) \n",
     "\n",
-    " "
+    "* Muestra en un plot la distribución $\\chi^2$ con una línea vertical con el valor que obtienes del ajuste. \n",
+    "\n"
    ]
   },
   {
@@ -539,7 +540,7 @@
     "\n",
     "* Compara los resultados usando el polinomio y la función anterior. \n",
     "\n",
-    "* Carga los datos extendidos: Data_exp_large.txt y compáralos con los ajustes hechos ya y compruebas."
+    "* Carga los datos extendidos: Data_exp_large.txt y usálo para comprobar si tus modelos se ajustan a los nuevos datos."
    ]
   },
   {
